# ComfyUI-Brekel

./: README.md  __init__.py  brekel_auto_prompt_generator.py  brekel_enhance_prompt.py  brekel_prompt_chooser.py  pyproject.toml  requirements.txt
.github/workflows/: publish_action.yml
auto_prompt_generator/: details.txt  locations.txt  styles.txt  subjects.txt
prompt_chooser/: cat.txt  dog.txt  robot.txt
prompt_enhancer/: Text_to_Image_T2I_prompt.txt  Text_to_Video_T2V_prompt.txt
