[project]
name = "brekel"
description = "Nodes to enhance & streamline prompts. Enhance using local LLM within ComfyUI, generate using random lines from text files, or randomly select text file prompts"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["bitsandbytes", "accelerate"]

[project.urls]
Repository = "https://github.com/Brekel/ComfyUI-Brekel"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "brekel"
DisplayName = "ComfyUI-Brekel"
Icon = ""
includes = []
